fixed navbar image section on small screen

--- a/src/Components/Navbar/NavbarImages/_navbar-images.scss
+++ b/src/Components/Navbar/NavbarImages/_navbar-images.scss
@@ -1,6 +1,6 @@
 .navbar-images {
   width: 100%;
-  height: inherit;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,13 +8,16 @@
 
   @include md-size {
     height: 100%;
+    justify-content: flex-end;
   }
 
   img {
     position: absolute;
     top: 0;
     right: 0;
-    width: 100%;
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
     opacity: 0;
     visibility: hidden;
     transform: translateY(70px);
@@ -23,10 +26,10 @@
     @include md-size {
       width: auto;
       max-height: 100%;
-      max-width: inherit;
     }
 
     &.active {
+      position: relative;
       opacity: 1;
       visibility: visible;
       transform: translateY(0px);
